@@ -14,6 +14,7 @@ module Netzke
       # Do some initialization which is only possible after Rails is initialized
       Netzke::Core.ext_location ||= ::Rails.root.join("public", "extjs")
       Netzke::Core.with_icons = File.exists?("#{Rails.root}/public#{Netzke::Core.icons_uri}") if Netzke::Core.with_icons.nil?
+      Netzke::Core.persistence_manager_class = Netzke::Core.persistence_manager.constantize rescue nil
     end
   end
 end
